r246 (14. 06. 2024):
Murky Station: Fixed a crash when a bag is secured
Lab Rats: Fixed a crash when a bag is secured

r245 (12. 06. 2024):
Added icon color distinction for achievement tracker, side job tracker or trophy tracker

r244 (04. 06. 2024):
Aggregated Health Equipment Tracker: Fixed crashes
Equipment Tracker: Fixed a crash

r243 (03. 06. 2024):
Added options "Show Assault Difficulty in Assault Trackers" and "Show Hostage Count Tracker"
Removed option "Aggregate Assault Delay and Duration into one tracker"; EHI will aggregate assault trackers automatically by default
Enabled grouping for Enemy Sentry Turret; further improving memory consumption with 2 or more turrets on the map

r242 (21. 05. 2024):
Hell's Island: Fixed an issue where Assault Tracker does not work correctly
Ukrainian Job: Fixed a crash with enabled Loot Counter
Slaughterhouse: Fixed a load crash

r241 (20. 05. 2024):
Updated to latest SuperBLT version (1.4.3)
GO Bank: Fixed trackers not appearing
Timer Group Tracker: Fixed missing gap between tracker and icons

r240 (07. 05. 2024):
Added option "When a Pager is answered"
Reworked some buffs to show only in loud as they do not matter in stealth
Captain Chance Tracker: Fixed an issue where the tracker is inaccurate in some heists

r239 (05. 05. 2024):
Added options "Show 'SNIPER LOGIC STARTED' Popup" and "Show 'SNIPER LOGIC ENDED' Popup"
Fixed an issue where waypoints do not work correctly
Ukrainian Job: Fixed an issue where Assault tracker is not accurate

r238 (19. 04. 2024):
Watchdogs Day 2: Fixed Assault Tracker not working correctly

r237 (11. 04. 2024):
Added option "Icons Position"

r236 (08. 04. 2024):
Fixed another crash in Experience Manager
Shadow Raid: Fixed an issue with limited xp bags

r235 (01. 04. 2024):
Fixed another crash in Experience Manager

r234 (30. 03. 2024):
Added option "Show XP Limited Max of Loot Bags"
Possible fix for crashes in Experience Manager

r233 (27. 03. 2024):