@@ -1,3 +1,6 @@
+r247 (15. 06. 2024):
+Fixed crashes related to achievement progress counters
+
 r246 (14. 06. 2024):
 Murky Station: Fixed a crash when a bag is secured
 Lab Rats: Fixed a crash when a bag is secured
